--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,23 @@
 .navbar {
+  border: dotted blue 2px;
   height: 100px;
-  background-color: rgb(0, 74, 74);
+  width: 100%;
+  background-color: rgb(0, 205, 205);
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.lowerNavbar {
+  border: solid red 1px;
+  background-color: rgb(0, 205, 205);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.lowerNavbar h2 {
+  margin: 5px;
 }
 
 .starCard {
