experiment with welcome page

--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,11 @@ a.active {
   color: white;
 }
 
-body {
+/* body {
   display: block;
   margin: 0px;
-}
+} */
+
 /* 
 .cardBig {
   height: 200px;
